--- a/docs/src/content/docs/Quote/svelte.mdx
+++ b/docs/src/content/docs/Quote/svelte.mdx
@@ -1,7 +1,17 @@
 ---
 title: '@flexiui/svelte-quote'
 author: 'alexgipi'
+content: 'This is a quote component example with editable mode enabled.'
+contentBasic: 'This is a basic usage of the Quote component.'
 ---
+import { Code } from 'astro-expressive-code/components'
+import { Quote } from '@flexiui/svelte-quote';
+import ComponentPreview from '../../../components/ComponentPreview.svelte';
+import QuoteBasicExample from './examples/QuoteBasicExample.svelte';
+import QuoteBasicExampleRaw from './examples/QuoteBasicExample.svelte?raw';
+
+import QuoteEditableExample from './examples/QuoteEditableExample.svelte';
+import QuoteEditableExampleRaw from './examples/QuoteEditableExample.svelte?raw';
 
 ## Instalación
 
@@ -23,58 +33,21 @@ yarn add @flexiui/svelte-quote
 
 Una vez instalado, puedes usar el componente `Quote` en tu aplicación de Svelte.
 
-```svelte
-<script>
-  import { Quote } from '@flexiui/svelte-quote';
-  let content = `This is a quote component example with editable mode enabled.`
-</script>
+<div class="card preview rounded">
+  <QuoteBasicExample />
+</div>
 
-<Quote
-className="my-quote"
-id="my-quote-id"
-bgColor="transparent" 
-bind:value={content}
->
-</Quote>
-```
+<Code code={QuoteBasicExampleRaw} lang="svelte" />
 
 ## Modo Editable y Eventos
 
 En el modo editable, el componente dispara una serie de eventos que se pueden utilizar para interactuar y responder a las acciones del usuario. Además, mediante `bind:` es posible vincular el contenido del componente a una variable en el script, permitiendo una sincronización automática.
 
-```svelte
-<script>
-  import { Quote } from '@flexiui/svelte-quote';
-  let content = `This is a quote component example with editable mode enabled.`;
+<div class="card preview rounded">
+  <QuoteEditableExample />
+</div>
 
-  function handleFocus(e: any) {
-    console.log('Focus event');
-    console.log(e);
-  }
-
-  function handleKeyDown(e: any) {
-    console.log('Keydown event');
-    console.log(e);
-  }
-
-  function handleInput(e: any) {
-    console.log('Input event');
-    console.log(e);
-  }
-</script>
-
-<Quote
-className="my-quote"
-id="my-quote-id"
-bgColor="transparent" 
-editable={true}
-bind:value={content}
-on:focus={handleFocus}
-on:keydown={handleKeyDown}
-on:input={handleInput}
->
-</Quote>
-```
+<Code code={QuoteEditableExampleRaw} lang="svelte" />
 
 ### Eventos disponibles
 
