docs(docs): Wrap DropdownBasicExample in a div for improved structure

--- a/docs/src/content/docs/dropdown/svelte.mdx
+++ b/docs/src/content/docs/dropdown/svelte.mdx
@@ -11,7 +11,9 @@ import DropdownBasicExample from './examples/DropdownBasicExample.svelte';
 import DropdownBasicExampleRaw from './examples/DropdownBasicExample.svelte?raw';
 
 <PreviewCard rounded outlined>
-  <DropdownBasicExample client:load/>
+  <div>
+    <DropdownBasicExample client:load/>
+  </div>
 </PreviewCard>
 
 ## Installation
