docs(docs): Update Quote component example to include line numbers for clarity

--- a/docs/src/content/docs/Quote/svelte.mdx
+++ b/docs/src/content/docs/Quote/svelte.mdx
@@ -42,7 +42,7 @@ In editable mode, the component triggers a series of events that can be used to 
   <QuoteEditableExample />
 </div>
 
-<Code code={QuoteEditableExampleRaw} lang="svelte" />
+<Code code={QuoteEditableExampleRaw} lang="svelte" ins={[25,26,27,28,29]} />
 
 ### Available Events
 
